# rust-tui-chat

./: Cargo.toml
src/client/: main.rs  tui.rs  websocket.rs
src/server/: main.rs
src/shared/: lib.rs
